--- a/src/app/admin/adminMenu/admin-menu.component.html
+++ b/src/app/admin/adminMenu/admin-menu.component.html
@@ -3,15 +3,23 @@
 
     <div class="top-bar-left">
         <ul class="menu">
-            <li class="admin-menu"><a href="#">One</a></li>
-            <li class="admin-menu"><a href="#">Two</a></li>
+            <li class="admin-menu"><a [routerLink]="['/admin/blog-admin']">Manage Blog</a></li>
         </ul>
     </div>
-    <div *ngIf = "currentUser" class="top-bar-right">
+    <div *ngIf = "theUser" class="top-bar-right">
         <ul class="menu">
             <li class="admin-menu"><a (click)="logout()">Logout</a></li>
             <li class="admin-menu"><a>{{theUser}} Logged in</a></li>
         </ul>
     </div>
 
+</div>
+
+<div class="row">
+  <img src="../adminShared/images/code.jpg">
+</div>
+
+<div class="row align-center">
+  <h2>Welcome to the Admin Area for the Gigabyte gaming Company.</h2>
+      <h3>This area is for authorized users only!</h3>
 </div>
