--- a/src/app/admin/blogAdmin/blog-admin.component.html
+++ b/src/app/admin/blogAdmin/blog-admin.component.html
@@ -18,6 +18,6 @@
 
 
 <div [ngSwitch]="menuChoice">
-    <div *ngSwitchCase="'add'"><h1>Add Menu</h1></div>
+    <div *ngSwitchCase="'add'"><add-menu></add-menu></div>
     <div *ngSwitchDefault><h1>Default</h1></div>
 </div>
